src/components/Header/Header.css
.header-container {
    height: 80px;
    background-color: rgb(222, 213, 203);
    display: flex;
    align-items: center;
    justify-content: space-between;
    border-bottom: 1px solid #000;
    width: 100%;
}

.header-container h1 {
    margin-left: 30px;
}

.functional {
    display: flex;
    align-items: center;
}

.search-container {
    margin-right: 30px;
}
.search-container input {
    font-size: 1.4rem;
    padding: 5px;
    border-radius: 5px;
}

.search-icon {
    position: relative;
    top: 4px;
    font-size: 1.6rem;
    margin-left: 10px;
}

.search-icon:hover,
.cart-icon:hover {
    cursor: pointer;
}


.cart-icon {
    font-size: 2rem;
    margin-right: 20px;
}

.cart-count {
    height: 20px;
    width: 20px;
    background-color: rgb(222, 213, 203);
    color: rgb(0, 0, 0);
    font-weight: bold;
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    border-radius: 50%;
    position: absolute;
    top: 47px;
    z-index: 1;
    border: 3px solid  rgb(255, 255, 255);
    cursor: pointer;
}

@media screen and (max-width: 780px) {
    .header-container{
        /* display: flex; */
        flex-direction: column;
        height: 130px;
        justify-content: center;
    }

    .header-container h1 {
        margin-left: 0;
        margin: 15px 0;
        font-size: 1.5rem;
    }

    .cart-count {
        top: 60px;
    }
}

